...

    <TextView
        android:id="@+id/item_count_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/quantity_stock"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_count"
        app:layout_constraintEnd_toStartOf="@+id/item_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_count"
...
    <Button
        android:id="@+id/sell_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/sell"
        app:layout_constraintBottom_toTopOf="@+id/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_count" />

    <Button
        android:id="@+id/delete_item"
...
